<resources>
    <string name="app_name">FoBo Reader</string>
    <string name="read_percent_string">%.2f%%</string>
    <string name="menu_search">Поиск</string>
    <string name="menu_sort">Сортировка</string>
    <string name="my_books">Мои книги</string>
    <string name="recent_books">Недавние</string>
    <string name="books_store">Магазин</string>
    <string name="device">Устройство</string>
    <string name="dropbox">Dropbox</string>
    <string name="settings">Настройки</string>
    <string name="about_text">Данное приложение разработано в рамках конкурса IT-Planet «Разработка мобильных приложений»</string>
    <string name="exit">Выход</string>
    <string name="see_all_btn">Все</string>
    <string name="recent">Недавние</string>
    <string name="all_books">Все книги</string>
    <string name="bookmarks">Закладки</string>
    <string name="btn_read_book">Читать</string>
    <string name="book_cover_desc">Обложка книги</string>
    <string name="context_menu_desc">Контекстное меню</string>
    <string name="file_icon_desc">Иконка файла</string>
    <string name="no_books">Книги отсутствуют</string>
    <string name="challenge_web">Страница конкурса</string>
    <string name="version">Версия:</string>
    <string name="battery_level_desc">Заряд батареи</string>
    <string name="speaker_desc">Динамик</string>
    <string name="main_tab">Главная</string>
    <string name="sort_by_name">По названию</string>
    <string name="sort_by_readed">По прочитанному</string>
    <string name="sort_by_date">По дате</string>
    <string name="dropbox_auth_button">Авторизоваться</string>
    <string name="book_category_desc">Изображение категории</string>
    <string name="dropbox_file_icon_desc">Иконка файла Dropbox</string>
    <string name="menu_delete">Удалить</string>
    <string name="about_book">О книге</string>
    <string name="menu_share_book">Поделиться</string>
    <string name="auth_button">Авторизоваться</string>
    <string name="navigation_background_desc">Фоновое изображение</string>
    <string name="error_book_load">Не удалось загрузить книгу, попробуйте снова, или перезапустите приложение</string>
    <string name="night_theme">Ночная тема</string>
    <string name="translate_color">Цвет перевода</string>
    <string name="translate_color_description">Цвет параграфа с переводом</string>
    <string name="text_size">Размер текста</string>
    <string name="dropbox_logout">Выйти из Dropbox</string>
    <string name="brightness_auto">Яркость по-умолчанию</string>
    <string name="settings_screen">Настройки</string>
    <string name="dropbox_logout_title">Выйти из Dropbox</string>
    <string name="dropbox_logout_message">Вы уверены, что хотите выйти из учётной записи Dropbox?</string>
    <string name="book_content_title">Содержание</string>
    <string name="no_bookmarks">Закладки отсутствуют</string>
    <string name="book_info_title">Информация о книге</string>
    <string name="store">Магазин</string>
    <string name="folder_up">…</string>
    <string name="permission_denied">Доступ запрещен</string>
    <string name="about_program">О программе</string>
    <string name="price">Цена:</string>
    <string name="gitlab">Gitlab.com</string>
    <string name="feedback">Обратная связь</string>
    <string name="vk">Вконтакте</string>
    <string name="libs">Сторонние библиотеки</string>
    <string name="google_plus">Google Plus</string>
    <string name="changelog_title">What\'s new</string>
    <string name="libraries_title">Сторонние библиотеки</string>
    <string name="libs_text">Crashlytics от Fabric
        Moxy от Arello Mobile
        Dagger от Google
        Butterknife от Jake Wharton
        RxJava от ReactiveX
        Retrofit2 от SquareUp
        Picasso от SquareUp
        Ormlite от j256
        Eventbus от Greenrobot
        Dropbox API
    </string>
    <string name="send_email_title">Отправить email</string>
    <string name="feedback_hint">Обратная связь</string>
    <string name="book_path">Файл:</string>
    <string name="current_page">Текущая страница:</string>
    <string name="book_genre">Жанр:</string>
    <string name="original_language">Оригинальный язык:</string>
    <string name="created_date">Дата создания:</string>
    <string name="restart_app_title">Внимание</string>
    <string name="restart_app_text">Применить выбранный язык, приложение будет перезапущено?</string>
    <!-- Non-translatable strings -->
    <string name="yandex_api_key" translatable="false">trnsl.1.1.20170113T101808Z.0188eae8ab6860f6.56cf55caa007b73c95ca0318be6d30ed2de15532</string>
    <string name="dropbox_api_key" translatable="false">mbo98pyzoi2dfxs</string>
    <string name="gitlab_profile" translatable="false">https://gitlab.com/users/mamykin.av/projects</string>
    <string name="challenge_link" translatable="false">http://world-it-planet.org/projects/competition_detail.php?ID=62249</string>
    <string name="google_profile" translatable="false">https://plus.google.com/u/0/111455238676040220610</string>
    <string name="mail" translatable="false">mamykin.av@bk.ru</string>
    <string name="fbwt_format">fbwt</string>
    <string name="download_on">%1$s, скачать на %2$s</string>
    <string name="wrong_file_format">Неподдерживаемый формат файла</string>
    <string name="read_pages_format">%1$d / %2$d</string>
</resources>