<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <include layout="@layout/appbar" />

        <LinearLayout
            android:id="@+id/llBookDetails"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#EEEEEE"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="100dp"
                android:layout_height="120dp"
                android:layout_margin="15dp"
                android:contentDescription="@null"
                android:scaleType="centerCrop"
                android:src="@drawable/img_no_image" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tvBookName"
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:textColor="#444"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    tools:text="Harry Potter and the Goblet of Fire" />

                <TextView
                    android:id="@+id/tvBookAuthor"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:textColor="#444"
                    android:textSize="16sp"
                    tools:text="Joanne Rowling" />

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="20dp"
            android:orientation="vertical">

            <TextView
                style="@style/DetailsBookTitleStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/bookmarks" />

            <TextView
                style="@style/DetailsTextNameStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/no_bookmarks" />

            <TextView
                style="@style/DetailsBookTitleStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/book_info_title" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">

                <TextView
                    style="@style/DetailsTextNameStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/book_path" />

                <TextView
                    android:id="@+id/tvBookPath"
                    style="@style/DetailsTextValueStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:text="sdcard/Download/harry_potter.fb2" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">

                <TextView
                    style="@style/DetailsTextNameStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/current_page" />

                <TextView
                    android:id="@+id/tvBookCurrentPage"
                    style="@style/DetailsTextValueStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:text="42" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">

                <TextView
                    style="@style/DetailsTextNameStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/book_genre" />

                <TextView
                    android:id="@+id/tvBookGenre"
                    style="@style/DetailsTextValueStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:text="Фантастика" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">

                <TextView
                    style="@style/DetailsTextNameStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/original_language" />

                <TextView
                    android:id="@+id/tvBookLanguage"
                    style="@style/DetailsTextValueStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:text="Английский" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">

                <TextView
                    style="@style/DetailsTextNameStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/created_date" />

                <TextView
                    android:id="@+id/tvBookCreatedDate"
                    style="@style/DetailsTextValueStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:text="22.06.1993" />

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fabRead"
        style="@style/FloatingButtonStyle"
        android:layout_width="56dp"
        android:layout_height="56dp"
        android:layout_marginEnd="20dp"
        android:layout_marginRight="20dp"
        android:src="@drawable/ic_book_read"
        app:layout_anchor="@id/llBookDetails"
        app:layout_anchorGravity="bottom|end" />

</android.support.design.widget.CoordinatorLayout>