<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include layout="@layout/appbar"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <android.support.v7.widget.SwitchCompat
                android:id="@+id/switchNightTheme"
                style="@style/SettingsTextItemStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="18dp"
                android:text="@string/night_theme"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:background="@android:color/darker_gray"/>

            <android.support.v7.widget.SwitchCompat
                android:id="@+id/switchBrightAuto"
                style="@style/SettingsTextItemStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="10dp"
                android:paddingLeft="16dp"
                android:paddingRight="16dp"
                android:paddingTop="16dp"
                android:text="@string/brightness_auto"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal"
                android:paddingBottom="16dp"
                android:paddingLeft="16dp"
                android:paddingRight="16dp">
                <ImageView
                    android:id="@+id/ivBrightnessIcon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@null"
                    android:src="@drawable/ic_sun"/>
                <android.support.v7.widget.AppCompatSeekBar
                    android:id="@+id/seekbarBright"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"/>
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:background="@android:color/darker_gray"/>

            <LinearLayout
                android:id="@+id/btnTranslateColor"
                style="@style/SettingsButtonItemStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">
                    <TextView
                        style="@style/SettingsTextItemStyle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/translate_color"/>
                    <TextView
                        style="@style/SettingsTextSubItemStyle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:maxLines="1"
                        android:text="@string/translate_color_description"/>
                </LinearLayout>
                <ImageView
                    android:id="@+id/ivTranslateColor"
                    android:layout_width="22dp"
                    android:layout_height="22dp"
                    android:layout_margin="5dp"
                    android:contentDescription="@null"
                    android:src="@drawable/ic_translate_color"/>
            </LinearLayout>
            <View
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:background="@android:color/darker_gray"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal"
                android:padding="16dp">
                <TextView
                    style="@style/SettingsTextItemStyle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/text_size"/>
                <TextView
                    android:id="@+id/tvTextSize"
                    style="@style/SettingsTextItemStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="10dp"
                    android:layout_marginRight="10dp"
                    tools:text="16"/>
                <ImageButton
                    android:id="@+id/btnTextSizeMinus"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/bg_btn_minus"
                    android:contentDescription="@null"
                    android:padding="5dp"
                    android:src="@drawable/ic_minus"/>
                <ImageButton
                    android:id="@+id/btnTextSizePlus"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/bg_btn_plus"
                    android:contentDescription="@null"
                    android:padding="5dp"
                    android:src="@drawable/ic_plus"/>
            </LinearLayout>
            <View
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:background="@android:color/darker_gray"/>

            <LinearLayout
                android:id="@+id/btnDropboxLogout"
                style="@style/SettingsButtonItemStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <TextView
                    style="@style/SettingsTextItemStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/dropbox_logout"/>
                <TextView
                    android:id="@+id/tvDropboxAccount"
                    style="@style/SettingsTextSubItemStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:maxLines="1"
                    tools:text="mamykin.andrey@gmail.com"/>
            </LinearLayout>
            <View
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:background="@android:color/darker_gray"/>

        </LinearLayout>
    </ScrollView>
</LinearLayout>